--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "main": "./server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node -r dotenv/config ./server/index.js",
+    "start": "nodemon -r dotenv/config ./server/index.js",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
-    "mongoose": "^5.0.15"
+    "express-session": "^1.15.6",
+    "mongoose": "^5.0.15",
+    "passport": "^0.4.0",
+    "passport-twitter": "^1.0.4"
   }
 }
